[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/loading_screen/ui_material.tres" type="Material" id=1]
[ext_resource path="res://gui/fonts/opensans_semibold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/main_menu_old/scenes/exit_button.png" type="Texture" id=3]
[ext_resource path="res://gui/main_menu_old/scenes/menu_button.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[node name="ExitButton" type="Button"]
margin_left = 62.25
margin_top = 128.5
margin_right = 210.25
margin_bottom = 174.5
flat = true
script = ExtResource( 4 )

[node name="ButtonTexture" type="Sprite" parent="."]
position = Vector2( 74.75, 22.5 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
material = ExtResource( 1 )
margin_left = 26.75
margin_top = 5.0
margin_right = 68.75
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_ExitButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ExitButton_mouse_exited"]
